# cachecraft

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md
scripts/: build.sh  run-tests.sh
src/bench/: main.cpp
src/client/: main.cpp
src/common/: protocol.cpp  protocol.h  types.h
src/server/: main.cpp  server.cpp  server.h  session.cpp  session.h
src/store/: cache_store.cpp  cache_store.h  lru_shard.cpp  lru_shard.h
tests/: test_integration.cpp  test_lru.cpp  test_protocol.cpp  test_store.cpp  test_ttl.cpp
